# confirmed_projects

./: README.md
cpp_rl_agent2/: .gitignore  CMakeLists.txt  CMakePresets.json
cpp_rl_agent2/src/: main.cpp
oglproj1/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
oglproj1/src/: main.cpp
oglproj1/src/glad1/: CMakeLists.txt
oglproj1/src/glad1/include/glad/: glad.h
oglproj1/src/glad1/src/: glad.c
